tests/snapshots/snapshot_expansion_tests__exp_error_info_with_details.snap
---
source: tests/snapshot_expansion_tests.rs
expression: e
---
{
  "code": "policy_denied",
  "message": "Tool 'bash' is not allowed",
  "details": {
    "policy_rule": "disallowed_tools",
    "tool": "bash"
  },
  "is_retryable": false
}
