tests/snapshots/snapshot_expansion_tests__exp_event_assistant_delta.snap
---
source: tests/snapshot_expansion_tests.rs
expression: "make_event(AgentEventKind::AssistantDelta { text: \"I'll start by \".into(), })"
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "assistant_delta",
  "text": "I'll start by "
}
