tests/snapshots/snapshot_expansion_tests__exp_event_command_executed_failed.snap
---
source: tests/snapshot_expansion_tests.rs
expression: "make_event(AgentEventKind::CommandExecuted\n{\n    command: \"cargo build\".into(), exit_code: Some(101), output_preview:\n    Some(\"error[E0308]: mismatched types\".into()),\n})"
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "command_executed",
  "command": "cargo build",
  "exit_code": 101,
  "output_preview": "error[E0308]: mismatched types"
}
