tests/snapshots/snapshot_expansion_tests__exp_event_file_changed.snap
---
source: tests/snapshot_expansion_tests.rs
expression: "make_event(AgentEventKind::FileChanged\n{ path: \"src/lib.rs\".into(), summary: \"Added caching module import\".into(), })"
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "file_changed",
  "path": "src/lib.rs",
  "summary": "Added caching module import"
}
