tests/snapshots/snapshot_expansion_tests__exp_event_run_started.snap
---
source: tests/snapshot_expansion_tests.rs
expression: "make_event(AgentEventKind::RunStarted\n{ message: \"Initializing workspace\".into(), })"
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "run_started",
  "message": "Initializing workspace"
}
